<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nanodegree.projects.p1.appportfolio.Proj1_MainActivity"
    tools:showIn="@layout/activity_proj1__main">

    <TextView
        android:id="@+id/textView"
        style="@style/MyButton"
        android:background="@color/background"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text_size" />

    <Button
        android:id="@+id/btn_popular_movies"
        style="@style/MyButton"
        android:layout_below="@+id/textView"
        android:background="@drawable/button_state_bg"
        android:text="@string/project2" />

    <Button
        android:id="@+id/btn_stok_hawk"
        style="@style/MyButton"
        android:layout_below="@+id/btn_popular_movies"
        android:background="@drawable/button_state_bg"
        android:text="@string/project3" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        style="@style/MyButton"
        android:layout_below="@+id/btn_stok_hawk"
        android:background="@drawable/button_state_bg"
        android:text="@string/project4" />

    <Button
        android:id="@+id/btn_make_material"
        style="@style/MyButton"
        android:layout_below="@+id/btn_build_it_bigger"
        android:background="@drawable/button_state_bg"
        android:text="@string/project5" />

    <Button
        android:id="@+id/btn_go_u"
        style="@style/MyButton"
        android:layout_below="@+id/btn_make_material"
        android:background="@drawable/button_state_bg"
        android:text="@string/project6" />

    <Button
        android:id="@+id/btn_capstone_app"
        style="@style/MyButton"
        android:layout_below="@+id/btn_go_u"
        android:background="@drawable/button_state_bg"
        android:text="@string/project7" />
</RelativeLayout>
